k8s/linkwarden/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden-postgres
  namespace: linkwarden
  labels:
    app: linkwarden-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkwarden-postgres
  template:
    metadata:
      labels:
        app: linkwarden-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
          resources:
            requests:
              memory: 512Mi
              cpu: 300m
            limits:
              memory: 1Gi
              cpu: 500m
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - linkwarden
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - linkwarden
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: linkwarden-postgres-pvc
