k8s/linkwarden/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkwarden-postgres
  namespace: linkwarden
  labels:
    app: linkwarden-postgres
spec:
  selector:
    app: linkwarden-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
  type: ClusterIP
